--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
-    "normalize-css": "normalize.css#^4.2.0"
+    "normalize-css": "normalize.css#^4.2.0",
+    "angular-file-upload": "^2.3.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
